# simulate-circuitpython-nativesim

./: LICENSE  README.md  action.yml  circuitpy_sim.py  pyproject.toml
build-firmware/: action.yml
prepare/: action.yml
prepare-circuitpy/: action.yml
prepare-flash/: action.yml
scripts/: prepare.py  simulate.py
simulate/: action.yml
