# SPDX-FileCopyrightText: Copyright (c) 2026 Alec Delaney
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "simulate-circuitpython-nativesim"
description = "Simulate CircuitPython using Zephyr simulator"
readme = "README.md"
authors = [
    {name = "Alec Delaney", email = "tekktrik@gmail.com"}
]
urls = {Homepage = "https://github.com/tekktrik/simulate-circuitpython"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "zephyr",
    "simulate",
    "simulator",
]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit~=4.5",
]

[project.scripts]
simulate-circuitpython = "circuitpy_sim:simulate_circuitpython"

[tool.setuptools]
py-modules = ["circuitpy_sim"]

[tool.setuptools.dynamic.version]
file = "VERSION"

[tool.ruff.lint]
select = ["D", "PL", "I"]
ignore = ["D213", "D203"]
